popular tour content done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
                 <button class="input">Where go</button>
                 <button class="input">When <i></i></button>
                 <button class="input">select type</button>
-                <button class="banner-button"></button>
+                <button class="banner-button">Find Now</button>
+            </div>
+        </section>
+        <section class="popular-tours">
+            <div class="popular-tours-content">
+                <h1 class="popular-headline">Our Popular Tours</h1>
+                <p class="popular-content">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <li class="popular-content">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                <li class="popular-content">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                <li class="popular-content">Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                <p class="popular-content">Amet consectetur. Vulputate commodo felis molestie risus 
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                <button class="banner-button">Read More</button>
+            </div>
+            <div class="popular-tours-image">
+                <img src="Images/Rectangle 4.png" alt="">
             </div>
         </section>
         <!-- Banner section ends here -->
