--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
         </section>
         <!-- Banner section ends here -->
     </header>
-    <main></main>
+    <main>
+        <section class="destination">
+            <div>
+                <h1>Choose Your Destination</h1>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="mal-ind">
+                <div class="maldives">Maldives</div>
+                <div class="indonesia">Indonesia</div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
     
 </body>
