destination images added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             <div class="mal-ind">
                 <div class="maldives">Maldives</div>
                 <div class="indonesia">Indonesia</div>
+                <div class="srilanka">Srilanka</div>
+                <div class="north-america">North America</div>
+                <div class="kashmir">Kashmir</div>
+                <div class="bangladesh">Bangladesh</div>
+                <div class="bandarban">Bandarban</div>
             </div>
         </section>
     </main>
