Whu Choose Me Responsive Done

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <!-- Banner section ends here -->
     </header>
     <main>
+        <!-- destination section starts here -->
         <section class="destination">
             <div>
                 <h1>Choose Your Destination</h1>
@@ -75,6 +76,31 @@
                 <div class="bandarban">Bandarban</div>
             </div>
         </section>
+        <!-- destination section ends here -->
+        <section class="section-2">
+            <div class="section2-heading">
+                <h1>Why Choose Us</h1>
+                <p class="section2-pg">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+        <div class="section-container">
+            <div class="hotel">
+                <img src="/Images/hotel.png" alt="">
+                <h3 class="section2-h3">Handpicked Hotels</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            <div class="service">
+                <img src="/Images/service.png" alt="">
+                <h3 class="section2-h3">World Class Service</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            <div class="discount">
+                <img src="/Images/discount.png" alt="">
+                <h3 class="section2-h3">Best Price Guarantee</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </div>
+        </section>
+
     </main>
     <footer></footer>
     
