Deals & Discounts added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
             </div>
         </div>
         </section>
+        <section class="section-3">
+                <div>
+                    <h3>Deals & Discounts</h3>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+                <div></div>
+        </section>
 
     </main>
     <footer></footer>
