--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,12 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="responsive" href="styles/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500;600;700;800&display=swap" rel="stylesheet">
 
-   
+
 </head>
+
 <body>
     <header>
         <!-- navbar starts here -->
@@ -33,7 +35,8 @@
         <!-- Banner section starts here -->
         <section class="banner">
             <h1 class="banner-heading">Explore Your Travel</h1>
-            <p class="banner-pg">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+            <p class="banner-pg">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et
+                odio enim ac quis sapien urna eu phasellus.
             </p>
             <div class="input-container">
                 <button class="input">Where go</button>
@@ -45,12 +48,17 @@
         <section class="popular-tours">
             <div class="popular-tours-content">
                 <h1 class="popular-headline">Our Popular Tours</h1>
-                <p class="popular-content">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-                <li class="popular-content">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                <li class="popular-content">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                <li class="popular-content">Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
-                <p class="popular-content">Amet consectetur. Vulputate commodo felis molestie risus 
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                <p class="popular-content">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. Sodales dictumst nec nibh pellentesque.</p>
+                <li class="popular-content">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio
+                    neque diam. Sociis erat at .</li>
+                <li class="popular-content">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta
+                    lacus. Lectus suspendisse nullam.</li>
+                <li class="popular-content">Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at
+                    in.</li>
+                <p class="popular-content">Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
                 <button class="banner-button">Read More</button>
             </div>
             <div class="popular-tours-image">
@@ -64,7 +72,8 @@
         <section class="destination">
             <div>
                 <h1>Choose Your Destination</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec nibh pellentesque.</p>
             </div>
             <div class="mal-ind">
                 <div class="maldives">Maldives</div>
@@ -80,36 +89,128 @@
         <section class="section-2">
             <div class="section2-heading">
                 <h1>Why Choose Us</h1>
-                <p class="section2-pg">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="section2-pg">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
-        <div class="section-container">
-            <div class="hotel">
-                <img src="/Images/hotel.png" alt="">
-                <h3 class="section2-h3">Handpicked Hotels</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            <div class="section-container">
+                <div class="hotel">
+                    <img src="/Images/hotel.png" alt="">
+                    <h3 class="section2-h3">Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="service">
+                    <img src="/Images/service.png" alt="">
+                    <h3 class="section2-h3">World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="discount">
+                    <img src="/Images/discount.png" alt="">
+                    <h3 class="section2-h3">Best Price Guarantee</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
             </div>
-            <div class="service">
-                <img src="/Images/service.png" alt="">
-                <h3 class="section2-h3">World Class Service</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-            </div>
-            <div class="discount">
-                <img src="/Images/discount.png" alt="">
-                <h3 class="section2-h3">Best Price Guarantee</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-            </div>
-        </div>
         </section>
         <section class="section-3">
-                <div>
-                    <h3>Deals & Discounts</h3>
-                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <div>
+                <h3>Deals & Discounts</h3>
+                <p class="deals-pg">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="section3-1">
+                <img src="Images/Group 39.png" alt="" class="group-39">
+                <div class="section-3-container">
+                    <div class="icons">
+                        <img src="Images/Frame (2).svg" alt="clock">
+                        <p>7 Day / 6 Night</p>
+                        <img src="Images/Frame (3).svg" alt="Contacts">
+                        <p>Max : 10</p>
+                        <img src="Images/Frame.svg" alt="Location">
+                        <p>Malaysia</p>
+                    </div>
+                    <div class="day-night-container">
+                        <h3>Tour To Satorini</h3>
+                        <p>Amet consectetur. Vulputate commodo felis
+                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                            Habitant adipiscing.</p>
+                        <h4 class="day-night-price">Price: $1300-$1500</h4>
+                        <button class="banner-button">Book Now</button>
+                    </div>
                 </div>
-                <div></div>
+            </div>
+
+            <div class="section3-2">
+                <img src="Images/Group 40.png" alt="" class="group-40">
+                <div class="section-3-container-2">
+                    <div class="icons">
+                        <img src="Images/Frame (2).svg" alt="clock">
+                        <p>7 Day / 6 Night</p>
+                        <img src="Images/Frame (3).svg" alt="Contacts">
+                        <p>Max : 10</p>
+                        <img src="Images/Frame.svg" alt="Location">
+                        <p>Malaysia</p>
+                    </div>
+                    <div class="day-night-container">
+                        <h3>Tour To Satorini</h3>
+                        <p>Amet consectetur. Vulputate commodo felis
+                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                            Habitant adipiscing.</p>
+                        <h4 class="day-night-price">Price: $1300-$1500</h4>
+                        <button class="banner-button">Book Now</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section3-3">
+                <img src="Images/Group 39.png" alt="" class="group-39">
+                <div class="section-3-container-3">
+                    <div class="icons">
+                        <img src="Images/Frame (2).svg" alt="clock">
+                        <p>7 Day / 6 Night</p>
+                        <img src="Images/Frame (3).svg" alt="Contacts">
+                        <p>Max : 10</p>
+                        <img src="Images/Frame.svg" alt="Location">
+                        <p>Malaysia</p>
+                    </div>
+                    <div class="day-night-container">
+                        <h3>Tour To Satorini</h3>
+                        <p>Amet consectetur. Vulputate commodo felis
+                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                            Habitant adipiscing.</p>
+                        <h4 class="day-night-price">Price: $1300-$1500</h4>
+                        <button class="banner-button">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-4">
+            <button class="section-4-button">See All Packages</button>
+            <div class="section-4-div-container">
+                <div class="section-4-div-1">
+                    <h3>A Simple Perfect Place To Get Lost</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. </p>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <button class="banner-button">See More</button>
+                </div>
+                <div class="section-4-div-2">
+                    <iframe width="560" height="400" src="https://www.youtube.com/embed/8sTUi4FXWQ4?si=Kskhx3w-42Dj9PRD"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
         </section>
 
     </main>
     <footer></footer>
-    
+
 </body>
+
 </html>
