Section-5 Responsive Added

--- a/index.html
+++ b/index.html
@@ -207,6 +207,24 @@
                 </div>
             </div>
         </section>
+        <section class="section-5">
+            <div class="section-5-div-1">
+                <div class="section-5-div-1-container">
+                    <h3>Newsletter</h3>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <div class="section-5-input">
+                        <hr>
+                        <input type="text" name="name" placeholder="      Enter Your Name">
+                        <input type="email" name="email" placeholder="      Enter Your Email">
+                        <button class="section-5-button">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+            <div class="section-5-div-2">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <button>Save up to 70%</button>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
