--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <!-- Banner section starts here -->
         <section class="banner">
             <h1 class="banner-heading">Explore Your Travel</h1>
-            <p class="banner-pg">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et
-                odio enim ac quis sapien urna eu phasellus.
+            <p class="banner-pg">Begin your journey in the City of Love, exploring iconic landmarks like the Eiffel Tower, Louvre Museum, and enjoying the charming streets of Montmartre.
             </p>
             <div class="input-container">
                 <button class="input">Where go</button>
@@ -48,17 +47,11 @@
         <section class="popular-tours">
             <div class="popular-tours-content">
                 <h1 class="popular-headline">Our Popular Tours</h1>
-                <p class="popular-content">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                    massa. Sodales dictumst nec nibh pellentesque.</p>
-                <li class="popular-content">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio
-                    neque diam. Sociis erat at .</li>
-                <li class="popular-content">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta
-                    lacus. Lectus suspendisse nullam.</li>
-                <li class="popular-content">Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at
-                    in.</li>
-                <p class="popular-content">Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                <p class="popular-content">Discover the wonders of the world with our exciting and diverse range of tours. At [Your Travel Agency Name], we strive to create unforgettable travel experiences that cater to every type of adventurer. Here are some of our most popular tours:</p>
+                <li class="popular-content">Explore the breathtaking landscapes and rich cultures of destinations like Bali, Maldives, and Fiji. Immerse yourself in the beauty of tropical paradises and create memories that last a lifetime.</li>
+                <li class="popular-content">Embark on a journey through the heart of Europe, visiting iconic cities such as Paris, Rome, and Barcelona. Indulge in the charm of historic architecture, savor delicious cuisines, and absorb the vibrant atmosphere of each unique destination.</li>
+                <li class="popular-content">For the thrill-seekers, our adventure expeditions offer adrenaline-pumping activities like trekking, rafting, and zip-lining. Explore off-the-beaten-path destinations like Patagonia, Nepal, and Costa Rica for an adventure of a lifetime.</li>
+                <p class="popular-content">Remember, these are just examples, and you can tailor the descriptions to match your actual tours. Highlight the unique selling points, special inclusions, or any exclusive partnerships your travel agency may have to make each tour enticing to potential customers.</p>
                 <button class="banner-button">Read More</button>
             </div>
             <div class="popular-tours-image">
@@ -72,8 +65,7 @@
         <section class="destination">
             <div>
                 <h1>Choose Your Destination</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
-                    nec nibh pellentesque.</p>
+                <p>This conceptual world tour takes you through the contrasting beauty of Asia, Europe, Africa, and South America, offering a mix of cultural immersion, historical exploration, and breathtaking scenery. </p>
             </div>
             <div class="mal-ind">
                 <div class="maldives">Maldives</div>
@@ -89,35 +81,30 @@
         <section class="section-2">
             <div class="section2-heading">
                 <h1>Why Choose Us</h1>
-                <p class="section2-pg">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                    massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="section2-pg">Encourage satisfied customers to leave positive reviews on your website, social media, and travel review sites. Positive feedback can build trust and credibility, influencing potential customers to choose your agency.</p>
             </div>
             <div class="section-container">
                 <div class="hotel">
                     <img src="/Images/hotel.png" alt="">
                     <h3 class="section2-h3">Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>A historic and iconic hotel located on Copacabana Beach, known for its glamorous atmosphere, opulent rooms, and legendary service. It's a perfect base to explore Rio's vibrant culture. </p>
                 </div>
                 <div class="service">
                     <img src="/Images/service.png" alt="">
                     <h3 class="section2-h3">World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>excellent communication and a commitment to exceeding expectations are key to providing world-class service. Regularly gather feedback from travelers to continuously improve your world tour experience. </p>
                 </div>
                 <div class="discount">
                     <img src="/Images/discount.png" alt="">
                     <h3 class="section2-h3">Best Price Guarantee</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Offering a "Best Price Guarantee" for your world tour can be a compelling feature to attract travelers. It instills confidence in potential customers and assures them that they are getting the most competitive pricing.</p>
                 </div>
             </div>
         </section>
         <section class="section-3">
             <div>
                 <h3>Deals & Discounts</h3>
-                <p class="deals-pg">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                    Sodales dictumst nec nibh pellentesque.</p>
+                <p class="deals-pg">Offering deals and discounts in your travel agency is a great way to attract customers, boost bookings, and create a competitive edge in the market. </p>
             </div>
             <div class="section3-1">
                 <img src="Images/Group 39.png" alt="" class="group-39">
@@ -132,9 +119,7 @@
                     </div>
                     <div class="day-night-container">
                         <h3>Tour To Satorini</h3>
-                        <p>Amet consectetur. Vulputate commodo felis
-                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-                            Habitant adipiscing.</p>
+                        <p>Certainly! Santorini is a stunning Greek island known for its breathtaking views, white-washed buildings, crystal-clear waters, and vibrant sunsets. </p>
                         <h4 class="day-night-price">Price: $1300-$1500</h4>
                         <button class="banner-button">Book Now</button>
                     </div>
@@ -153,10 +138,8 @@
                         <p>Malaysia</p>
                     </div>
                     <div class="day-night-container">
-                        <h3>Tour To Satorini</h3>
-                        <p>Amet consectetur. Vulputate commodo felis
-                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-                            Habitant adipiscing.</p>
+                        <h3>Tour To Kuakata</h3>
+                        <p>Kuakata is located in Bangladesh. Known for its stunning panoramic views of the Bay of Bengal, Kuakata is often referred to as the "Daughter of the Sea".</p>
                         <h4 class="day-night-price">Price: $1300-$1500</h4>
                         <button class="banner-button">Book Now</button>
                     </div>
@@ -175,10 +158,8 @@
                         <p>Malaysia</p>
                     </div>
                     <div class="day-night-container">
-                        <h3>Tour To Satorini</h3>
-                        <p>Amet consectetur. Vulputate commodo felis
-                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-                            Habitant adipiscing.</p>
+                        <h3>Tour To Hawayii</h3>
+                        <p>Hawaii is a beautiful and diverse destination with stunning landscapes, vibrant culture, and a wide range of activities. </p>
                         <h4 class="day-night-price">Price: $1300-$1500</h4>
                         <button class="banner-button">Book Now</button>
                     </div>
@@ -191,12 +172,9 @@
             <div class="section-4-div-container">
                 <div class="section-4-div-1">
                     <h3>A Simple Perfect Place To Get Lost</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. </p>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
-                        suspendisse nullam.</li>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
-                        suspendisse nullam.</li>
+                    <p>If you're looking for a simple and perfect place to get lost, consider the quaint and serene town of Hallstatt, Austria.</p>
+                    <li>Scenic Beauty: Hallstatt is nestled between the Dachstein Alps and the Hallstätter See, providing stunning views of crystal-clear waters and charming alpine landscapes.</li>
+                    <li>Tranquility: This small town is known for its peaceful atmosphere. Stroll along its narrow streets, enjoy the lakeside views, and feel a sense of calm away from the hustle and bustle.</li>
                     <button class="banner-button">See More</button>
                 </div>
                 <div class="section-4-div-2">
@@ -225,9 +203,26 @@
                 <button>Save up to 70%</button>
             </div>
         </section>
-
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <div class="footer-logo">
+                <img src="Images/iqra.png" alt="" class="footer-img">
+                <h1>IQRA <SPan>TRAVELS</SPan></h1>
+            </div>
+            <div class="footer-pg">
+                <p>Thank you for considering IQRA TRAVELS for your world tour. We're excited to assist you in creating unforgettable travel experiences. Feel free to reach out to us through the following channels: </p>
+            </div>
+            <img src="Images/Social.svg" alt="" class="social">
+        </div>
+        <hr>
+        <div>
+            <p class="copyright">2017, All Rights Reserved.</p>
+        </div>
+        <div>
+
+        </div>
+    </footer>
 
 </body>
 
